[SI 30266077] Fix merge mis-alignment

--- a/app/assets/stylesheets/application/media_queries.css.scss
+++ b/app/assets/stylesheets/application/media_queries.css.scss
@@ -679,7 +679,7 @@ footer {
               border-bottom-width: 0;
               display: block;
               position: absolute;
-              right: 1em; /* arbitrary >~ 10px */
+              right: 10px; /* see .field */
               text-align: right;
               top: 1em; /* see #housenumber .field */
               p {
@@ -687,6 +687,7 @@ footer {
                 font-size: 0.86em;
                 font-weight: bold;
                 margin-top: 0;
+                margin-right: 10px; /* see .field label and .field input */
               }
             }
             .field {
